fix: button mobile optimizations

--- a/static/global.css
+++ b/static/global.css
@@ -160,4 +160,17 @@ button.small,
     p {
         font-size: 0.875rem;
     }
+
+    button,
+    .button {
+        padding: 0.875rem 1.25rem;
+        font-size: 0.625rem;
+    }
+
+    button.small,
+    .button.small {
+        padding: 0.375rem 0.75rem;
+        font-size: 0.5625rem;
+    }
+
 }
